# wasm0-wasmi

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  cgo.go  cgo_test.go  go.mod  rust-toolchain
crates/arena/: Cargo.toml
crates/c-api/: Cargo.toml
crates/c-api/src/: lib.rs
crates/c-api/src/engine/: engine.rs  factory.rs  mod.rs  proxy_factory.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: compiler.rs  drop_keep.rs  lib.rs  module.rs  opcode.rs
crates/core/: Cargo.toml
crates/core/src/: binary_format.rs  encoding.rs  host_call.rs  host_error.rs  lib.rs  linker.rs  meta.rs  module.rs  opcode.rs  trap.rs  untyped.rs  utils.rs
crates/fuzz/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/benches/: benches.rs
crates/runtime/benches/bench/: mod.rs
crates/runtime/src/: externref.rs  global.rs  lib.rs  linker.rs  store.rs  value.rs
crates/runtime/src/engine/: bytecode.rs  cache.rs  code_map.rs  config.rs  executor.rs  func_args.rs  func_types.rs  mod.rs  opcode.rs  resumable.rs  tests.rs  tracer.rs  traits.rs
crates/runtime/src/engine/bytecode/: mod.rs  utils.rs
crates/runtime/src/engine/func_builder/: error.rs  inst_builder.rs  labels.rs  translator.rs
crates/runtime/src/engine/stack/: mod.rs
crates/runtime/src/engine/stack/values/: mod.rs  sp.rs  tests.rs
crates/runtime/src/func/: funcref.rs  into_func.rs  mod.rs  typed_func.rs
crates/runtime/src/instance/: mod.rs
crates/runtime/src/memory/: data.rs  mod.rs
crates/runtime/src/module/: element.rs  global.rs  import.rs  init_expr.rs  mod.rs  parser.rs  utils.rs
crates/runtime/src/module/compile/: mod.rs
crates/runtime/src/module/instantiate/: mod.rs  tests.rs
crates/runtime/src/table/: element.rs  mod.rs
crates/runtime/tests/e2e/: mod.rs
crates/runtime/tests/e2e/v1/: fuel_consumption_mode.rs  fuel_metering.rs  func.rs  host_calls_wasm.rs  mod.rs  resumable_call.rs  simple_test.rs
crates/runtime/tests/spec/: context.rs  error.rs  mod.rs
crates/spec/: Cargo.toml
crates/spec/src/: context.rs  error.rs  lib.rs  run.rs
crates/wasmi/: Cargo.toml
crates/wasmi/src/: lib.rs  store.rs
crates/wasmi/src/engine/: code_map.rs  config.rs  executor.rs  func_args.rs  func_types.rs  mod.rs  opcode.rs  tracer.rs
crates/wasmi/src/engine/bytecode/: mod.rs  utils.rs
crates/wasmi/src/engine/func_builder/: inst_builder.rs  mod.rs  translator.rs
crates/wasmi/src/engine/stack/values/: mod.rs
crates/wasmi/src/func/: func_type.rs  mod.rs
crates/wasmi/src/instance/: builder.rs  mod.rs
crates/wasmi/src/module/compile/: mod.rs
crates/wasmi/src/module/instantiate/: mod.rs
crates/wasmi/src/table/: mod.rs
crates/wasmi/tests/e2e/v1/: fuel_metering.rs  simple_test.rs
fuzz/: Cargo.toml
packaged/include/: wasmi.h
packaged/lib/: dummy.go
packaged/lib/darwin-aarch64/: libwasmi_c_api.dylib
packaged/lib/darwin-amd64/: libwasmi_c_api.dylib
packaged/lib/linux-amd64/: dummy.go
testdata/: greeting_i32.wat  greeting_i64.wat  simple.wasm  simple.wat
