[workspace]
members = [
    "crates/arena",
#    "crates/bin",
    "crates/compiler",
    "crates/core",
    "crates/runtime",
]
exclude = []
resolver = "2"

[workspace.package]
authors = [
    "Parity Technologies <admin@parity.io>",
    "Robin Freyler <robin.freyler@gmail.com>",
]
repository = "https://github.com/paritytech/wasmi"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]

[profile.bench]
lto = "fat"
codegen-units = 1

[profile.release]
opt-level = 1
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true
