[package]
name = "wasmi_c-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safer-ffi = "0.0.10"
wasmi = { version = "0.29", path = "../wasmi" }
wasmprinter = "0.2.48"
wat = "1.0.55"

[features]
headers = ["safer-ffi/headers"]

[lib]
bench = false
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "generate-headers"
path = "src/bin/generate-headers.rs"
required-features = ["headers"]
test = false
bench = false

[profile.release]
opt-level = 1
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true
