[package]
name = "wasmi_c_api_package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safer-ffi = "0.0.10"
wasmi = { version = "0.29", path = "../wasmi" }
wasmprinter = "0.2.48"
wat = "1.0.55"

[features]
headers = ["safer-ffi/headers"]

[lib]
name = "wasmi_c_api"
bench = false
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "generate_headers"
path = "src/bin/generate-headers.rs"
required-features = ["headers"]
test = false
bench = false
