[package]
name = "wasmi_c_api_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.17.1"
safer-ffi = "0.0.10"
serde_json = "1.0.96"
wasmi = { version = "0.29", path = "../wasmi" }
wasmprinter = "0.2.48"
wat = "1.0.55"

[features]
headers = ["safer-ffi/headers"]

[lib]
name = "wasmi_c_api"
bench = false
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "generate_headers"
path = "src/bin/generate-headers.rs"
required-features = ["headers"]
test = false
bench = false

[build]
target = "x86_64-unknown-linux-gnu"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/local/bin/x86_64-unknown-linux-gnu-gcc"
